WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268025
Corrupt/missing tile content on tab switch
https://bugs.webkit.org/show_bug.cgi?id=268025
Summary
Corrupt/missing tile content on tab switch
Matt Woodrow
Reported
2024-01-24 12:47:37 PST
<
rdar://121488303
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2024-01-24 12:53:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23187
EWS
Comment 2
2024-01-24 22:37:58 PST
Committed
273475@main
(e203798dcce8): <
https://commits.webkit.org/273475@main
> Reviewed commits have been landed. Closing PR #23187 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug